--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,112 @@
+
+div.App_Date_Picker label {
+color: white;
+}
+div.App_Date_Picker input {
+  color: white!important;
+}
+
+div.App_Date_Picker div.MuiInputBase-root {
+  border: solid 1px white;
+}
+div.App_Date_Picker svg {
+  color: white;
+}
+img.App_rabbit_resize {
+  width: 175px;
+  position: absolute;
+  bottom: 0;
+  left: 28px;
+}
+ul.App_ul {
+  text-align: center;
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  padding-top: 33px;
+  position: absolute;
+  top: 0px;
+  
+}
+.App_block_rabbit img {
+  width: 109px;
+}
+
+ul.App_ul>li {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+img.App_kakao_img 
+{
+  position: relative;
+  cursor: pointer;
+  left: 0;
+  transition: left 0.5s cubic-bezier(0, 0, 1, 1);
+}
+
+.App_admin_panel {
+  text-align: center;
+}
+ul.App_ul a {
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+  font-size: 24px;
+  border: solid 1px;
+  padding: 7px;
+}
+.App_calendar_month_day_week {
+  height: 30px !important;
+  border: none !important;
+  color: white;
+  font-weight: bold;
+}
+.App_calendar_month_day_week.holiday {
+  color: #FF9800;
+}
+.App_calendar_month {
+  display: grid;
+  grid-template-columns: 120px 120px 120px 120px 120px 120px 120px;
+  justify-content: center;
+ 
+  gap:15px;
+}
+.App_calendar_month>div {
+  border: solid 1px ;
+  height: 80px;
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  flex-direction: row-reverse;
+  padding-top: 11px;
+}
+
+.App_calendar_dayOf {
+ 
+  text-align: right;
+  padding-right: 8px;
+}
+.App_calendar_dayOf {
+  font-weight: bold;
+}
+
+.App_modal_form_middle label {
+  color: white;
+  font-weight: bold;
+}
+div#root {
+  background-blend-mode: multiply;
+  background: url(../src/rabbit.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-bottom: 50px;
+  background-color: #00000082;
+}
+.App_calendar_month_day_empty {
+  background: #fd090940;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -63,39 +172,45 @@ padding-bottom: 30px;
   width: 100%;
   text-align: center;
 }
-
+.App_calendar_day {
+  color: white;
+  font-weight: bold;
+}
 .App_calendar_button button {
-  background: #005d58;
+  background: #0e3735;
   border: none;
   height: 40px;
   width: 40px;
   border-radius: 30px;
-  font-size: 11px;
-  color: white;
   font-weight: bold;
+  background-size: 100%;
+  color: white;
+  font-size: 14px;
 }
-
+.App_calendar_day {
+  width: 100%;
+  text-align: right;
+  padding-right: 19px;
+  color: white;
+}
 .App_top {
   text-align: center;
+  color: white;
+  padding-top:100px;
 }
 .App_modal_form {
-  top:100px;
+  top: 200px;
   width: 840px;
   padding-top: 40px;
   padding-bottom: 40px;
-  height:auto;
-  background-image: url(https://lidkon.by/wp-content/uploads/2022/09/t20x7357-1.png);
+  height: auto;
   position: fixed;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-blend-mode: multiply;
-  background-color: #00000059;
-
-
-  
+  background: #001d1d94;
 }
 
 
@@ -158,16 +273,24 @@ span.App_modal_tickets {
   font-weight: bold;
   border-radius: 30px;
 }
-
+.App_update button {
+  background: none;
+  border: none;
+  color: white;
+  font-size: 32px;
+  cursor: grab;
+}
 .App_modal_middle input, select {
   height: 35px;
   width: 263px;
 }
-
+.App_modal_form_btn {
+  flex-direction: column;
+}
 .App_modal_middle>div {
-  display: grid;
+  /* display: grid;
   grid-template-columns: 50% 50%;
-  gap: 30px;
+  gap: 30px; */
   padding-top: 23px;
 }
 
@@ -175,8 +298,8 @@ span.App_modal_tickets {
   display: flex;
   gap: 30px;
   padding-top: 23px;
-  justify-content: space-around;
   align-items: center;
+  justify-content: flex-start;
 }
 
 .App_modal_form_btn button {
